<resources>
    <string name="app_name">DA</string>
    <string name="main_menu_button1">دفترچه ثبت قند خون</string>
    <string name="main_menu_button2">محاسبه دوز انسولین</string>
    <string name="main_menu_button3">محاسبه BMI</string>
    <string name="main_menu_button4">آزمایش ها</string>
    <string name="main_menu_button5">کالری مواد غذایی</string>
    <string name="main_menu_button6">رویداد ها</string>
    <string name="main_menu_button7">مطالب مفید</string>
    <string-array name="bloodsugar_store_insert_array">
        <item>صبح ناشتا</item>
        <item>قبل از ناهار</item>
        <item>دو ساعت بعد از ناهار</item>
        <item>قبل از شام</item>
        <item>قبل از خواب</item>
    </string-array>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="reminder_title">AlarmReminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="banner_home_footer">ca-app-pub-9147883601338456/9322254129</string>
    <string name="weightLabel">Weight</string>
    <string name="heightLabel">Height</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="sharing_text" formatted="false">
        Hi guys,Check out this new Health Calculator with tremendous features,It is amazing! https://play.google.com/store/apps/details?id=
    </string>
    <string-array name="height_spinner_array">
        <item>ft + in</item>
        <item>cm</item>

    </string-array>
    <string-array name="length_spinner_array">

        <item>in</item>
        <item>cm</item>
        <item>ft</item>

    </string-array>
    <string-array name="waist_spinner_array">
        <item>in</item>
        <item>cm</item>
    </string-array>
    <string-array name="neck_spinner_array">
        <item>in</item>
        <item>cm</item>
    </string-array>
    <string-array name="hip_spinner_array">
        <item>in</item>
        <item>cm</item>
    </string-array>
    <string-array name="weight_spinner_array">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="goal_spinner_array">
        <item>Maintain current weight</item>
        <item>Lose 0.5kg per week</item>
        <item>Lose 1kg per week</item>
        <item>Gain 0.5kg per week</item>
        <item>Gain 1kg per week</item>
    </string-array>
    <string-array name="activity_spinner_array">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day)</item>
    </string-array>
    <string name="bmi_text" formatted="false">Body mass index (BMI) is a measure of relative size based on the mass and height of an individual.The BMI is defined as the body mass divided by the square of the body height, and is universally expressed in units of kg/m2,resulting from mass in kilograms and height in metres.</string>
    <string name="bfp_text" formatted="false">"The body fat percentage (BFP) of a human or other living being is the total mass of fat divided by total body mass; body fat includes essential body fat and storage body fat.The percentage of essential fat is 2–5% in men, and 10–13% in women.The body fat percentage is a measure of fitness level,since it is the only body measurement which directly calculates a person's relative body composition without regard to height or weight."</string>
    <string name="bmr_text" formatted="false">"Your BMR (Basal Metabolic Rate) is an estimate of how many calories you'd burn if you were to do nothing but rest for 24 hours. It represents the minimum amount of energy needed to keep your body functioning, including breathing and keeping your heart beating.Your BMR does not include the calories you burn from normal daily activities or exercise."</string>
    <string name="wth_text" formatted="false">"A person's waist-to-height ratio (WHtR), also called waist-to-stature ratio (WSR),is defined as their waist circumference divided by their height, both measured in the same units.The WHtR is a measure of the distribution of body fat.Higher values of WHtR indicate higher risk of obesity-related cardiovascular diseases;it is correlated with abdominal obesity."</string>
    <string name="radiobutton_clickme">Radio button (click me)</string>
<string name="dark_theme">تم تیره</string>
<string name="dark_theme_summary">تعیین تم تیره برای اپلیکیشن</string>
<string name="light_status_bar_mode">Light Status Bar Mode</string>
<string name="light_toolbar_mode">Light Toolbar Mode</string>
<string name="not_available_below_m">Not available below 6.0 Marshmallow.</string>
<string name="not_available_below_lollipop">Not available below 5.0 Lollipop.</string>
<string name="rv_sample">RV Sample</string>
<string name="tabs_sample">Tabs Sample</string>
<string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed magna et dolor luctus mollis. Sed suscipit quam enim, in iaculis turpis finibus quis. Morbi fermentum ante quis magna tempus suscipit. Sed rhoncus sed felis non elementum. Morbi porttitor molestie mauris, eget maximus ante sagittis eget. Donec id congue mauris, quis pulvinar erat. Sed cursus est eu erat malesuada vehicula. Fusce est dui, tempus a leo a, finibus accumsan tellus. Duis vitae sem ullamcorper, hendrerit odio ac, vestibulum orci. Nunc et dui nec ligula semper congue eget in sapien. Vestibulum consectetur vel lacus sed hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus. In justo mi, mollis eu leo non, malesuada consequat nisi. Vestibulum euismod mauris dui, in volutpat est placerat et. In hac habitasse platea dictumst.  Cras vitae suscipit quam. Ut orci enim, laoreet non mi in, convallis pretium quam. Donec lobortis nisi ut malesuada auctor. Aenean vel porttitor velit. Cras tincidunt, purus ut volutpat mattis, magna lectus sodales arcu, eget pretium nisi ex et nisi. Vivamus vel euismod nulla. Vivamus eget metus sit amet lacus tempor faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed magna et dolor luctus mollis. Sed suscipit quam enim, in iaculis turpis finibus quis. Morbi fermentum ante quis magna tempus suscipit. Sed rhoncus sed felis non elementum. Morbi porttitor molestie mauris, eget maximus ante sagittis eget. Donec id congue mauris, quis pulvinar erat. Sed cursus est eu erat malesuada vehicula. Fusce est dui, tempus a leo a, finibus accumsan tellus. Duis vitae sem ullamcorper, hendrerit odio ac, vestibulum orci. Nunc et dui nec ligula semper congue eget in sapien. Vestibulum consectetur vel lacus sed hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus. In justo mi, mollis eu leo non, malesuada consequat nisi. Vestibulum euismod mauris dui, in volutpat est placerat et. In hac habitasse platea dictumst.  Cras vitae suscipit quam. Ut orci enim, laoreet non mi in, convallis pretium quam. Donec lobortis nisi ut malesuada auctor. Aenean vel porttitor velit. Cras tincidunt, purus ut volutpat mattis, magna lectus sodales arcu, eget pretium nisi ex et nisi. Vivamus vel euismod nulla. Vivamus eget metus sit amet lacus tempor faucibus.</string>
<string name="collapsing_toolbar">Collapsing Toolbar</string>
<string name="drawer_tablayout">Tab Layout</string>
<string name="drawer_recyclerview">RecyclerView</string>
<string name="button">Button</string>
<string name="drawer_collapsingtoolbar">Collapsing Toolbar</string>
<string name="drawer_settings">Settings</string>
<string name="search">Search</string>
<string name="search_view_example">SearchView example…</string>
    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>
    <string name="primary_text_color">Primary Text Color</string>
    <string name="primary_text_color_summary">Change the primary text color</string>
    <string name="secondary_text_color">Secondary Text Color</string>
    <string name="secondary_text_color_summary">Change the secondary text color</string>
    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>
    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>
    <string name="drawer_about">About</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_close">Close nav drawer</string>
    <string name="drawer_open">Open nav drawer</string>
    <string name="light_ui_modes">Light UI Modes</string>
    <string name="system_ui_colors">System UI Colors</string>
    <string name="base_theme">انتخاب تم</string>
    <string name="ate_colors">ATE Colors</string>
    <string name="other_textsizes_note">Note: there are other text size configurations not included here for simplicity reasons.</string>
    <string name="headline_textsize">Headline Text Size</string>
    <string name="title_textsize">Title Text Size</string>
    <string name="subheading_textsize">Subheading Text Size</string>
    <string name="body_textsize">Body Text Size</string>
    <string name="headline_textsize_desc">Apply a text size to all headline text views, %ddp</string>
    <string name="title_textsize_desc">Apply a text size to all title text views, %ddp</string>
    <string name="subheading_textsize_desc">Apply a text size to all subheading text views, %ddp</string>
    <string name="body_textsize_desc">Apply a text size to all body text views, %ddp</string>
    <string name="text_sizes">Text Sizes</string>
    <string name="fragment_theming">Fragment Theming!</string>
    <string name="drawer_widgets">Widgets</string>
    <string name="drawer_misc">Misc</string>
    <string name="misc">Miscellaneous</string>
    <string name="text_input_layout">Text Input Layout</string>
</resources>